main.css
body {
  background: #00a651;
}

h2, button {
  font-family: 'Lobster', cursive;
}

.card {
  position: relative;
  float: left;
  width: 150px;
  height: 220px;
  background: #fff;
  border-radius: 10px;
  margin-right: 5px;
  box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
}

.card p {
  text-align: center;
  font: 100px/220px 'Lobster', cursive;
}

.cardback p {
  font-family: 'Lobster', cursive;
  font-size: 2.9em;
  transform: rotate(-45deg);
}

.cardback:before, .cardback:after {
  content: "♕";
  color: #ff0000;
}

.cardback:after {
  color: #ff0000;
}

.suitdiamonds, .suithearts {
  color: #ff0000;
}

.suitdiamonds:before, .suitdiamonds:after {
  content: "♦";
  color: #ff0000;
}

.suithearts:before, .suithearts:after {
  content: "♥";
  color: #ff0000;
}

.suitclubs:before, .suitclubs:after {
  content: "♣";
  color: #000;
}

.suitspades:before, .suitspades:after {
  content: "♠";
  color: #000;
}

div[class*='suit']:before {
  position: absolute;
  font-size: 35px;
  left: 5px;
  top: 5px;
}

div[class*='suit']:after {
  position: absolute;
  font-size: 35px;
  right: 5px;
  bottom: 5px;
}

.hand {
  margin: 50px;
}

/* For modern browsers */
.hand:before,
.hand:after {
    content:"";
    display:table;
}

.hand:after {
    clear:both;
}

.card:hover {
  cursor: pointer;
}

.deck {
  position: absolute;
  top: 82px;
  right: 30px;
  width: 175px;
  height: 220px;
}

.deckcard {
  position: absolute;
}

#deck1 {
  left: 10px;
}

#deck2 {
  left: 7px;
}

#deck3 {
  left: 4px;
}

.playbuttons {
  margin-top: 50px;
}

.row {
  margin-top: 20px;
  height: 220px;
}

@keyframes dealanimation {
  from {left: 1500px;}
  to {left: 25px;}
}
.animatefinal {
  animation-name: dealanimation;
  animation-duration: .2s;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

.animated {
    -webkit-animation-duration: .3s;
    animation-duration: .3s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

